@@ -1,3 +1,15 @@
+2012-08-31  Geoffrey Garen  <ggaren@apple.com>
+
+        Use one object instead of two for closures, eliminating ScopeChainNode
+        https://bugs.webkit.org/show_bug.cgi?id=95501
+
+        Reviewed by Sam Weinig.
+
+        Adding a test to demonstrate the behavior change in this patch.
+
+        * fast/js/function-constructor-this-value-expected.txt: Added.
+        * fast/js/function-constructor-this-value.html: Added.
+
 2012-08-31  Jon Lee  <jonlee@apple.com>
 
         ondisplay event handlers are not called
